--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Example environment configuration (copy to .env)
 # Only VITE_* vars are exposed to the client in Vite.
 
+# Backend API
+VITE_API_BASE_URL=http://localhost:3001
+
+# GeoServer
 VITE_GEOSERVER_BASE_URL=https://16.52.55.27.nip.io/geoserver
 VITE_GEOSERVER_WORKSPACE=municipal_planning
 # VITE_GEOSERVER_WMS_URL=
