--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "cesium": "^1.135.0",
     "framer-motion": "^12.29.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
